Closed Bug 1801459 Opened 1 year ago Closed 1 year ago

Regression on macOS: Fullscreen behavior is broken

Categories

(Core :: Widget: Cocoa, defect)

defect

Tracking

()

VERIFIED FIXED
109 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox107 --- unaffected
firefox108 --- verified
firefox109 --- verified

People

(Reporter: mehmet.sahin, Assigned: edgar)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Nightly 109.0a1 (2022-11-18) (64-Bit)
macOS 12.6.1

1.) Open a new window on the Desktop
2.) Click on the Green Window Control Button to switch into Fullscreen
3.) Click on the Red Window Control Button or press CMD-W to close the window so that you are back on the Desktop again
4.) Open a new window with CMD-N

Actual: Fullscreen window opens

Expected: The new window should open on the Desktop

This is a regression.

Strangely I can no longer reproduce this issue?!

Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → INVALID

I see this issue again in Nighty 109.0a1 (2022-11-22) (64-Bit) on macOS 12.6.1 :(

Status: RESOLVED → REOPENED
Resolution: INVALID → ---
Component: General → Widget: Cocoa
Product: Firefox → Core

Okay, I have now the correct steps to reproduce:

1.) Open a new window on the Desktop
2.) Click on the Green Window Control Button to switch into Fullscreen
3.) Press CMD-N to open a second new window in fullscreen (notice the janky animation - see bug 1801460)
3.) Now, close both fullscreen windows with CMD-W or by clicking on the red window control button
4.) Click on the Nightly Dock icon to open a new window on the desktop

Actual: New window in Fullscreen open.

Expected: New window should open on the desktop.

This is really a bad regression for MacOS experience. Here is the regression range:

Good build: 2022-10-20-10-56-05-mozilla-central
Bad build: 2022-10-20-21-51-26-mozilla-central

Looks like Bug 1795139 in this range touched fullscreen related code. Maybe this is cause of this regression?

echen@ Can you please take a look, if this is related to your change? Many Thanks :)

Flags: needinfo?(echen)

Bug 1795139 only changed the way to show fullscreen notification, it should not affect how fullscreen is handled in widget, so it is unlikely a regression of Bug 1795139. But I will try to get regression window if possible.

(In reply to Edgar Chen [:edgar] from comment #5)

Bug 1795139 only changed the way to show fullscreen notification, it should not affect how fullscreen is handled in widget, so it is unlikely a regression of Bug 1795139. But I will try to get regression window if possible.

Many thanks in advance !

mozregression points me to Bug 1795804.

Flags: needinfo?(echen)
Regressed by: 1795804

It is bascially for macOS as user could switch widget to fullscreen via
window control button in macOS, and the fullscreen state on chrome window isn't
updated yet.

Assignee: nobody → echen

Set release status flags based on info from the regressing bug 1795804

Attachment #9305178 - Attachment description: Bug 1801459 - Don't persist sizemode when sizemode changes to fullscreen; r?emilio → Bug 1801459 - Use widget sizemode to decide whether persistent should be saved; r?emilio
Duplicate of this bug: 1801460
Pushed by echen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/06a19335d057
Use widget sizemode to decide whether persistent should be saved; r=emilio
Status: REOPENED → RESOLVED
Closed: 1 year ago1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 109 Branch

The patch landed in nightly and beta is affected.
:edgar, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox108 to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(echen)

Comment on attachment 9305178 [details]
Bug 1801459 - Use widget sizemode to decide whether persistent should be saved; r?emilio

Beta/Release Uplift Approval Request

  • User impact if declined: The new window might be opened in fullscreen mode wrongly and fullscreen transition is not smooth.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: Follow the STR in https://bugzilla.mozilla.org/show_bug.cgi?id=1801459#c3.
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Small tweak on how we check widget is in fullscreen mode, the change should be safe.
  • String changes made/needed: None
  • Is Android affected?: No
Flags: needinfo?(echen)
Attachment #9305178 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9305178 [details]
Bug 1801459 - Use widget sizemode to decide whether persistent should be saved; r?emilio

Approved for 108.0b8

Attachment #9305178 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

Reproduced in Nightly 109.0a1 (2022-11-22) using macOS 12.
Verified - Fixed in Beta 108.0b9 and the latest Nightly 109.0a1 (2022-12-02) on macOS 12.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+

Many thanks for fixing this issue!

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: