Bug 1801459 - Use widget sizemode to decide whether persistent should be saved; r=emilio, a=dsmith

Fullscreen state on chrome window might not accurate as it might not be updated
yet, e.g. user clicks the window controls button to switch fullscreen mode on
macOS.

Differential Revision: https://phabricator.services.mozilla.com/D163028